--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cross-spawn": "^7.0.6",
+    "micromatch": "^4.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "rollup": "^4.28.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -27,7 +30,6 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
-    "vite": "^5.4.1",
-    "port":"5173"
+    "vite": "^6.0.3"
   }
 }
